--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "rm -rf node_modules package-lock.json && npm install"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
